--- a/app/view/cold-start-page.html
+++ b/app/view/cold-start-page.html
@@ -4,3 +4,4 @@
 <p class="LengQiDongP">更多·更全·更好用</p>
 <p class="time">{{time}}s</p>
 <a class="pase" ui-sref="index">跳过</a>
+<script src="js/setWidth.js"></script>
