--- a/app/view/game-notice.html
+++ b/app/view/game-notice.html
@@ -1,4 +1,4 @@
-<div class="public_header">
+<div class="public_header" id="header">
     <div class="public_header_leftMenu">
         <img class="public_header_leftImg" src="image/header/headerbar-back.png" alt="返回" ui-sref="index">
     </div>
@@ -19,3 +19,4 @@
         <p>即日起至10月1日止，新用户注册登录官方论坛即可以免费领取宠物蛋哦！</p>
     </div>
 </div>
+<script src="js/setWidth.js"></script>
