--- a/app/view/gameAbout-us.html
+++ b/app/view/gameAbout-us.html
@@ -1,4 +1,4 @@
-<div class="public_header">
+<div class="public_header" id="header">
     <div class="public_header_leftMenu">
         <img class="public_header_leftImg" src="image/header/headerbar-back.png" alt="返回"  ui-sref="index">
     </div>
@@ -28,3 +28,4 @@
         </div>
     </div>
 </div>
+<script src="js/setWidth.js"></script>
