--- a/app/view/gameOver.html
+++ b/app/view/gameOver.html
@@ -1,5 +1,5 @@
 <!--Header-->
-<div class="public_header">
+<div id="header" class="public_header">
     <div class="public_header_leftMenu" ui-sref="index({versionId:vm.versionId})">
         <img  src="image/header/bar-home.png">
     </div>
@@ -33,8 +33,9 @@
             </ul>
         </li>
     </ul>
-    <div class="footer-gameOver">
+    <div id="footer" class="footer-gameOver">
         <button class="footer-button-gameOver footer-button-gameOver-left" ui-sref="index({versionId:vm.versionId})">再来一次</button>
         <button class="footer-button-gameOver footer-button-gameOver-right">上传并分享</button>
     </div>
 </div>
+<script src="js/setWidth.js"></script>
