--- a/app/view/gameTime.html
+++ b/app/view/gameTime.html
@@ -1,5 +1,5 @@
 <!--header-->
-<div class="public_header">
+<div id="header" class="public_header">
     <!--<div class="public_header_leftMenu">-->
         <!--<img  src="image/header/logHeaderLeft.png">-->
     <!--</div>-->
@@ -41,8 +41,9 @@
     </ul>
 </div>
     <!--底部-->
-    <div class="footer">
+    <div id="footer" class="footer">
         <button class="footer-button" ng-click="vm.confirm()">确定</button>
     </div>
 </div>
 <!--End 主体-->
+<script src="js/setWidth.js"></script>
