--- a/app/view/judgeLog.html
+++ b/app/view/judgeLog.html
@@ -1,5 +1,5 @@
 <!--header-->
-<div class="public_header">
+<div id="header" class="public_header">
     <h1>法官日记</h1>
 </div>
 <!--End header-->
@@ -26,8 +26,9 @@
         </ul>
     </div>
     <!--底部-->
-    <div class="footer">
+    <div id="footer" class="footer">
         <button class="footer-button" ui-sref="days({versionId:vm.versionId})">返回</button>
     </div>
 </div>
 <!--End 主体-->
+<script src="js/setWidth.js"></script>
