--- a/app/view/setting-page.html
+++ b/app/view/setting-page.html
@@ -1,4 +1,4 @@
-<div class="public_header">
+<div class="public_header" id="header">
     <div class="public_header_leftMenu">
         <img class="public_header_leftImg" src="image/header/logHeaderLeft.png" alt="">
     </div>
@@ -43,8 +43,9 @@
             </label>
 
         </div>
-        <div class="playerSet_Button">
+        <div class="playerSet_Button" id="footer">
             <button ng-click="vm.playerAllot()">去发牌</button>
         </div>
     </div>
 </div>
+<script src="js/setWidth.js"></script>
