--- a/app/css/gameOver.css
+++ b/app/css/gameOver.css
@@ -6,6 +6,7 @@ div.public_body_gameOver{
     padding: 1.5vw;
     max-width: 768px;
     min-width: 320px;
+    height: 100%;
 }
 /*图片*/
 img{
@@ -21,7 +22,7 @@ img{
     margin-bottom: 0.2rem;
 }
 .result {
-    margin-top:1rem ;
+    margin-top:0.8rem ;
     font-size: 0.26rem;
     color: white;
     overflow: hidden;
