--- a/app/css/gameTime.css
+++ b/app/css/gameTime.css
@@ -91,8 +91,8 @@ div.footer{
 .playerRole{
     position: relative;
     margin: auto;
-    width: 80%;
-    border: 5px white solid;
+    /*width: 80%;*/
+    border: 0.05rem white solid;
 }
 .playerStatus{
     font-size: 0.3rem;
