--- a/app/css/judgeView.css
+++ b/app/css/judgeView.css
@@ -1,50 +1,52 @@
 .judgeView-content{
-    overflow: hidden;
-    background: #29bde0;
-    height: 88vh;
-    margin-top: 8vh;
     overflow-y: auto;
-}
-.judgeView-block{
-    margin-top: 0.63rem ;
-    padding: 0 0.44rem;
-}
-.judgeView-box{
-    margin:0 0.2rem 0.73rem 0.2rem;
-    display: inline-block;
-    width: 1.38rem;
-    border: solid 0.05rem #fff;
-    text-align: center;
-}
-.judgeView-Role{
-    font-size: 0.3rem;
-    line-height: 0.99rem;
-    background: #f5c97b;
+    width: 100%;
+    background: #29bde0;
+    overflow: hidden;
+    margin-top: 9vh;
+    padding: 0.62rem 0 2rem 0;
 }
 .judgeView-title{
-    font-size: 0.4rem;
+    font-size: 0.5rem;
+}
+.judgeView-block{
+    width:6.4rem ;
+    margin: auto;
+    padding-left: 0.46rem;
+}
+.judgeView-box{
+    width: 1.36rem;
+    height: 1.36rem;
+    box-sizing: border-box;
+    border: solid 0.05rem #fff;
+    float: left;
+    text-align: center;
+    margin: 0 0.62rem 0.62rem 0;
+}
+.judgeView-Role{
+    line-height: 0.97rem;
+    background: #f5c97b;
+    font-size: 0.3rem
 }
 .judgeView-Number{
-    line-height: 0.27rem;
+    line-height: 0.31rem;
     background: #83b09a;
-    font-size: 0.22rem;
+    font-size: 0.2277rem;
     color: #fff;
 }
 .judgeView-footer{
     position: fixed;
     bottom: 0;
-    max-width: 7.68rem;
-    width: 100%;
-    border-top: 0.03rem solid #fff;
+    width:6.4rem;
+    height: 1.97rem;
+    background:#29bde0;
     text-align: center;
-    background: #29bde0;
-    height: 1.7rem;
 }
 .judgeView-btn{
-    margin-top: 0.5rem;
-    color: #FFF;
-    width: 4.9rem;
+    color: #fff;
+    line-height: 0.85rem;
     background: #fbb435;
     font-size: 0.4rem;
-    height: 0.9rem;
+    width: 4.9rem;
+    margin-top: 0.5rem;
 }
