--- a/app/view/days.html
+++ b/app/view/days.html
@@ -1,4 +1,4 @@
-<div class="public_header">
+<div id="header" class="public_header">
     <div class="public_header_leftMenu">
         <img  src="image/header/headerbar-back.png">
     </div>
@@ -9,7 +9,7 @@
 </div>
 <!-- 模态框（Modal） -->
 <modal></modal>
-<div class="public_body_days" >
+<div class="public_body_days" id="task" >
     <ul class="days-wrap" id="days-wrap">
         <li  ng-repeat="daysView in vm.days track by $index">
             <div class="day-wrap">
@@ -19,6 +19,9 @@
                     <div class="day-content-wrap">
                         <!--黑夜/白天-->
                         <div class="day-content-{{vm.version.time[0]}}">
+                            <div class="day-content-img">
+                                <img src="image/{{vm.version.time[0]}}.png">
+                            </div>
                             <!--引导弹框-->
                             <div class="guideFrame" ng-class="{'guideFrameClickOver':(vm.guideHitCount[daysView.day-1].guideHit[guide1].hitCount!=0)}" ng-repeat="guide1 in vm.version.daysGuide[0] track by $index" ng-click="vm.canJumpPage(guide1,0,$index,daysView.day)">
                                 <!--导引框小三角-->
@@ -35,6 +38,9 @@
                         </div>
                         <!--白天黑夜-->
                         <div class="day-content-{{vm.version.time[1]}}">
+                            <div class="day-content-img">
+                                <img src="image/{{vm.version.time[1]}}.png">
+                            </div>
                             <div class="guideFrame" ng-class="{'guideFrameClickOver':(vm.guideHitCount[daysView.day-1].guideHit[guide2].hitCount!=0)}" ng-repeat="guide2 in vm.version.daysGuide[1]  track by $index" ng-click="vm.canJumpPage(guide2,1,$index,daysView.day)">
                                 <!--导引框小三角-->
                                 <div class="trigon" ng-class="{'trigonClickOver':(vm.guideHitCount[daysView.day-1].guideHit[guide2].hitCount!=0)}"></div>
@@ -52,8 +58,9 @@
         </li>
     </ul>
     <!--<button id="buttonLog" class="jndgeLog" ui-sref="judgeLog({versionId:vm.versionId})">Log</button>-->
-    <div class="footer-days">
+    <div id="footer" class="footer-days">
         <button class="footer-button-days footer-button-days-left" ui-sref="gameOver({versionId:vm.versionId})">结束游戏</button>
         <button class="footer-button-days footer-button-days-right" ui-sref="judgeLog({versionId:vm.versionId})">查看Log</button>
     </div>
 </div>
+<script src="js/setWidth.js"></script>
