--- a/app/view/gameHelp.html
+++ b/app/view/gameHelp.html
@@ -1,4 +1,4 @@
-<div class="public_header">
+<div class="public_header" id="header">
     <div class="public_header_leftMenu">
         <img class="public_header_leftImg" src="image/header/headerbar-back.png" alt="返回"  ui-sref="index">
     </div>
@@ -20,3 +20,4 @@
         <p>游戏介绍</p>
     </div>
 </div>
+<script src="js/setWidth.js"></script>
