--- a/app/css/game-notice.css
+++ b/app/css/game-notice.css
@@ -8,7 +8,8 @@
 }
 
 .Notice-content{
-    margin: 20vh auto 0 auto;
+    margin:  0 auto;
+    padding-top:20vh;
     width: 5.68rem;
 }
 .Notice-One{
