--- a/app/view/gameList.html
+++ b/app/view/gameList.html
@@ -1,5 +1,5 @@
 
-<div class="public_header">
+<div id="header" class="public_header">
     <div class="public_header_leftMenu" ng-click="side=!side">
         <img  src="image/header/indexHeader.png" alt="">
     </div>
@@ -53,7 +53,6 @@
 
         </div>
 
-
     </div>
 </div>
-<script src="js/setWidth.js"></script>
+
