--- a/views/main.html
+++ b/views/main.html
@@ -11,7 +11,7 @@
     </div>
     <div class="nav-bar">
         <ul>
-            <li ui-sref="person.homePage">个人主页</li>
+            <li ui-sref="person.home">个人主页</li>
             <li ui-sref="person.note">个人笔记</li>
             <li ui-sref="person.recommend">个人推荐</li>
             <li ui-sref="person.shall">讨论/分享</li>
